--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@ li {
     list-style: none;
 }
 
+button {
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
 .container {
     width: 100%;
     height: 80vh;
